# voicetosrt

./: .gitignore  Intel GPU加速UVR5人声伴奏分离.ipynb  Intel GPU加速Whisper识别.ipynb  README.md  app.py  pyproject.toml  requirements.txt  run_AMD.cmd  run_cuda.cmd  run_xpu.cmd
